<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/GroupDialog_Title"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <ListView
        android:id="@+id/id_GroupDialog_GroupListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="12dp">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:text="@string/GroupDialog_UE"
            android:background="@color/transparent"
            android:textColor="@color/pink"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"

            android:text="@string/GroupDialog_SHITA"
            android:background="@color/transparent"
            android:textColor="@color/pink"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/id_GroupDialog_ButtonDelete"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"

            android:text="@string/GroupDialog_Delete"
            android:background="@color/transparent"
            android:textColor="@color/pink"/>

        <Button
            android:id="@+id/id_GroupDialog_ButtonAdd"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"

            android:text="@string/GroupDialog_Add"
            android:background="@color/transparent"
            android:textColor="@color/pink"/>

        <Button
            android:id="@+id/id_GroupDialog_ButtonEdit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"

            android:text="@string/GroupDialog_Edit"
            android:background="@color/transparent"
            android:textColor="@color/pink"/>

        <Button
            android:id="@+id/id_GroupDialog_ButtonCancel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"

            android:text="@string/GroupDialog_Return"
            android:background="@color/transparent"
            android:textColor="@color/pink"/>

    </LinearLayout>

</LinearLayout>
