<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFFFF"
    android:elevation="2dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/tab_note"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/tab_note_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:contentDescription="@string/tudo"
            android:src="@drawable/tab_note_normal" />

        <TextView
            android:id="@+id/tab_note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notefragment_tab_text"
            android:textColor="@color/image_color_black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_search"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/tab_search_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:contentDescription="@string/tudo"
            android:src="@drawable/tab_search_normal" />

        <TextView
            android:id="@+id/tab_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchfragment_tab_text"
            android:textColor="@color/image_color_black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_class"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/tab_class_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:contentDescription="@string/tudo"
            android:src="@drawable/tab_class_normal" />

        <TextView
            android:id="@+id/tab_class_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classfragment_tab_text"
            android:textColor="@color/image_color_black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_file"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/tab_file_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:contentDescription="@string/tudo"
            android:src="@drawable/tab_file_normal" />

        <TextView
            android:id="@+id/tab_file_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filefragment_tab_text"
            android:textColor="@color/image_color_black"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>